--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -16,13 +16,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Use Node.js 18 for structuredClone support
+          node-version: 18  # Use Node.js 18 for Firebase compatibility
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build project
         run: npm run build
+
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools  # Install Firebase CLI globally
 
       - name: Deploy to Firebase
         env:
