--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.20",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.15.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
